# bitcoin-broker

./: Cargo.toml  DESIGN.md
src/: main.rs  models.rs  prelude.rs  seller.rs
src/marketplaces/: kraken.rs
tests/data/: btc_usd_2019_02_01-2020_08_19.csv
