[package]
name = "broker"
version = "0.1.0"
authors = ["Michael <bausanomichal@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
rust_decimal = "1.7"
crossbeam-channel = "0.4"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
rand = "0.7"

