[package]
name = "broker"
version = "0.1.0"
authors = ["Michael <bausanomichal@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4"
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
rust_decimal = "1.7"
tungstenite = "0.11"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
csv = "1.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }

